color change and cleanup

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
     <header class="l-header">
       <nav class="nav bd-grid">
         <div>
-          <a href="#" class="nav__logo">Marlon</a>
+          <a href="#" class="nav__logo">Vinay</a>
         </div>
 
         <div class="nav__menu" id="nav-menu">
@@ -244,19 +244,12 @@
       <section class="home bd-grid" id="home">
         <div class="home__data">
           <h1 class="home__title" data-i18n="title">
-            Hi,<br />I'am <span class="home__title-color">Marlon</span><br />
-            Web Designer
+            Hi,<br />I'am <span class="home__title-color">Vinay</span><br />
+           Khortha lyricist, singer, writer,director, and cultural activist
           </h1>
 
-          <a href="#" class="button">Contact</a>
         </div>
-
-        <div class="home__social">
-          <a href="" class="home__social-icon"><i class="bx bxl-linkedin"></i></a>
-          <a href="" class="home__social-icon"><i class="bx bxl-behance"></i></a>
-          <a href="" class="home__social-icon"><i class="bx bxl-github"></i></a>
-        </div>
-
+        
         <div class="home__img">
           <svg
             class="home__blob"
@@ -369,31 +362,6 @@
         </div>
       </section>
 
-      <!--===== WORK =====-->
-      <section class="work section" id="work">
-        <h2 class="section-title" data-i18n="work">Work</h2>
-
-        <div class="work__container bd-grid">
-          <a href="" class="work__img">
-            <img src="assets/img/work1.jpg" alt="" />
-          </a>
-          <a href="" class="work__img">
-            <img src="assets/img/work2.jpg" alt="" />
-          </a>
-          <a href="" class="work__img">
-            <img src="assets/img/work3.jpg" alt="" />
-          </a>
-          <a href="" class="work__img">
-            <img src="assets/img/work4.jpg" alt="" />
-          </a>
-          <a href="" class="work__img">
-            <img src="assets/img/work5.jpg" alt="" />
-          </a>
-          <a href="" class="work__img">
-            <img src="assets/img/work6.jpg" alt="" />
-          </a>
-        </div>
-      </section>
 
       <!--===== GALLERY =====-->
       <section class="gallery section" id="gallery">
@@ -473,30 +441,6 @@
         <div class="news-list" id="news-list"></div>
       </section>
 
-      <!--===== CONTACT =====-->
-      <section class="contact section" id="contact">
-        <h2 class="section-title" data-i18n="contact">Contact</h2>
-
-        <div class="contact__container bd-grid">
-          <form action="" class="contact__form">
-            <input type="text" placeholder="Name" class="contact__input" />
-            <input type="mail" placeholder="Email" class="contact__input" />
-            <textarea
-              name=""
-              id=""
-              cols="0"
-              rows="10"
-              class="contact__input"
-            ></textarea>
-            <input
-              type="button"
-              value="Enviar"
-              class="contact__button button"
-            />
-          </form>
-        </div>
-      </section>
-    </main>
 
     <!-- Lightbox -->
     <div class="lightbox" id="lightbox">
@@ -512,7 +456,9 @@
         <a href="#" class="footer__icon"><i class="bx bxl-instagram"></i></a>
         <a href="#" class="footer__icon"><i class="bx bxl-twitter"></i></a>
       </div>
-      <p class="footer__copy">&#169; Bedimcode. All rigths reserved</p>
+      <p class="footer__copy">Made with ❤ in India</p>
+
+      <p class="footer__copy">&#169; Arkvision Labs Private Limited. All rigths reserved</p>
     </footer>
 
     <!--===== SCROLL REVEAL =====-->
@@ -537,7 +483,7 @@
             gallery: "Gallery",
             news: "News",
             contact: "Contact",
-            title: 'Hi,<br>I\'am <span class="home__title-color">Marlon</span><br> Web Designer',
+            title: 'Hi,<br>I\'am <span class="home__title-color">Vinay</span><br> Web Designer',
             about_subtitle: "I'am Marlon",
             about_text: "Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate cum expedita quo culpa tempora, assumenda, quis fugiat ut voluptates soluta, aut earum nemo recusandae cumque perferendis! Recusandae alias accusamus atque.",
             skills_subtitle: "Professional Skills",
