--- a/index.html
+++ b/index.html
@@ -9,200 +9,6 @@
       rel="stylesheet"
     />
     <title>Vinay Kumar Tiwari - Khortha Lyricist & Cultural Activist</title>
-    <style>
-      /* Language Toggle */
-      .language-toggle {
-        background: transparent;
-        border: 1px solid var(--first-color);
-        color: var(--first-color);
-        padding: 0.5rem 1rem;
-        border-radius: 0.5rem;
-        cursor: pointer;
-        margin-right: 1rem;
-        transition: all 0.3s ease;
-      }
-
-      .language-toggle:hover {
-        background: var(--first-color);
-        color: #fff;
-      }
-
-      .nav__actions {
-        display: flex;
-        align-items: center;
-      }
-
-      /* Gallery Section */
-      .gallery__container {
-        max-width: 1200px;
-        margin: 0 auto;
-        padding: 0 1rem;
-      }
-
-      .gallery__filter {
-        display: flex;
-        justify-content: center;
-        flex-wrap: wrap;
-        margin-bottom: 2rem;
-      }
-
-      .gallery__filter-btn {
-        margin: 0 0.5rem;
-        padding: 0.5rem 1rem;
-        background: transparent;
-        border: none;
-        color: var(--text-color);
-        cursor: pointer;
-        font-size: var(--normal-font-size);
-        border-radius: 0.5rem;
-        transition: all 0.3s ease;
-      }
-
-      .gallery__filter-btn.active,
-      .gallery__filter-btn:hover {
-        background: var(--first-color);
-        color: #fff;
-      }
-
-      .gallery__grid {
-        display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-        gap: 1.5rem;
-      }
-
-      .gallery__item {
-        position: relative;
-        overflow: hidden;
-        border-radius: 0.5rem;
-        box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-        height: 250px;
-        cursor: pointer;
-      }
-
-      .gallery__item img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        transition: transform 0.5s ease;
-      }
-
-      .gallery__overlay {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: rgba(0, 0, 0, 0.7);
-        color: #fff;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        opacity: 0;
-        transition: opacity 0.3s ease;
-      }
-
-      .gallery__item:hover .gallery__overlay {
-        opacity: 1;
-      }
-
-      .gallery__item:hover img {
-        transform: scale(1.1);
-      }
-
-      .gallery__overlay h3 {
-        font-size: 1.5rem;
-        margin-bottom: 0.5rem;
-      }
-
-      .gallery__overlay p {
-        font-size: 1rem;
-      }
-
-      /* Lightbox */
-      .lightbox {
-        display: none;
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: rgba(0, 0, 0, 0.9);
-        z-index: 1000;
-        align-items: center;
-        justify-content: center;
-      }
-
-      .lightbox img {
-        max-width: 90%;
-        max-height: 90%;
-      }
-
-      .lightbox-close {
-        position: absolute;
-        top: 20px;
-        right: 20px;
-        color: white;
-        font-size: 2rem;
-        cursor: pointer;
-      }
-
-      /* News Section */
-      .news-section {
-        padding: 4rem 0;
-      }
-
-      .news-list {
-        display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-        gap: 2rem;
-        margin-top: 2rem;
-      }
-
-      .news-card {
-        background: white;
-        border-radius: 0.5rem;
-        overflow: hidden;
-        box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-        transition: transform 0.3s ease;
-      }
-
-      .news-card:hover {
-        transform: translateY(-5px);
-      }
-
-      .news-card img {
-        width: 100%;
-        height: 200px;
-        object-fit: cover;
-      }
-
-      .news-content {
-        padding: 1.5rem;
-      }
-
-      .news-content h3 {
-        margin-bottom: 0.5rem;
-        font-size: 1.2rem;
-      }
-
-      .news-content a {
-        display: inline-block;
-        margin-top: 1rem;
-        color: var(--first-color);
-        text-decoration: none;
-        font-weight: bold;
-      }
-
-      .news-content a:hover {
-        text-decoration: underline;
-      }
-
-      /* Skills Section Customization */
-      .skills__name {
-        text-transform: capitalize;
-      }
-    </style>
   </head>
   <body>
     <!--===== HEADER =====-->
@@ -419,6 +225,16 @@
           </div>
         </div>
       </section>
+      <!-- Lightbox Carousel -->
+      <div class="lightbox" id="lightbox">
+        <span class="lightbox-close">&times;</span>
+        <button class="carousel-control prev">&#10094;</button>
+        <div class="carousel-container">
+          <img id="lightbox-img" src="" alt="" class="lightbox-image" />
+        </div>
+        <button class="carousel-control next">&#10095;</button>
+        <div class="lightbox-caption" id="lightbox-caption"></div>
+      </div>
 
       <!--===== GALLERY =====-->
       <section class="gallery section" id="gallery">
@@ -533,11 +349,6 @@
     <!--===== FOOTER =====-->
     <footer class="footer">
       <p class="footer__title">Vinay Kumar Tiwari</p>
-      <div class="footer__social">
-        <a href="#" class="footer__icon"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="footer__icon"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="footer__icon"><i class="bx bxl-twitter"></i></a>
-      </div>
       <p class="footer__copy">Made with ❤ in India</p>
       <p class="footer__copy">
         &#169; Arkvision Labs Private Limited. All rights reserved
