--- a/index.html
+++ b/index.html
@@ -338,6 +338,14 @@
         <h2 class="section-title" data-i18n="news_title">News & Articles</h2>
         <div class="news-list" id="news-list"></div>
       </section>
+
+      <!--===== YOUTUBE VIDEOS =====-->
+<section class="videos section" id="videos">
+  <h2 class="section-title" data-i18n="videos">YouTube Videos</h2>
+  <div class="videos__container" id="youtube-videos-container">
+    <!-- Videos will be inserted here by JavaScript -->
+  </div>
+</section>
     </main>
 
     <!-- Lightbox -->
