--- a/index.html
+++ b/index.html
@@ -61,7 +61,6 @@
           <h1 class="home__title" data-i18n="title">
             Hi,<br />I'am <span class="home__title-color">Vinay Tiwari</span
             ><br />
-            Khortha lyricist, singer, writer, director, and cultural activist
           </h1>
         </div>
         <div class="home__img">
@@ -249,13 +248,7 @@
             >
               All
             </button>
-            <button
-              class="gallery__filter-btn"
-              data-filter="performance"
-              data-i18n="filter_performance"
-            >
-              Performances
-            </button>
+
             <button
               class="gallery__filter-btn"
               data-filter="awards"
@@ -273,62 +266,78 @@
           </div>
 
           <div class="gallery__grid">
-            <div class="gallery__item" data-category="performance">
+            <div class="gallery__item" data-category="events">
               <img
-                src="assets/img/work1.jpg"
+                src="assets/img/event.jpg"
                 alt="Vinay performing at cultural event"
               />
               <div class="gallery__overlay">
-                <h3 data-i18n="performance1">Cultural Performance</h3>
-                <p data-i18n="click_view">Click to view</p>
-              </div>
-            </div>
-
-            <div class="gallery__item" data-category="awards">
-              <img
-                src="assets/img/work2.jpg"
-                alt="Receiving Jharkhand Lok Kala Samman"
-              />
-              <div class="gallery__overlay">
-                <h3 data-i18n="award1">Receiving Award</h3>
-                <p data-i18n="click_view">Click to view</p>
-              </div>
-            </div>
-
-            <div class="gallery__item" data-category="events">
-              <img src="assets/img/work3.jpg" alt="At literature festival" />
-              <div class="gallery__overlay">
-                <h3 data-i18n="event1">Literature Festival</h3>
-                <p data-i18n="click_view">Click to view</p>
-              </div>
-            </div>
-
-            <div class="gallery__item" data-category="performance">
-              <img src="assets/img/work4.jpg" alt="Singing Khortha folk song" />
-              <div class="gallery__overlay">
-                <h3 data-i18n="performance2">Folk Song Performance</h3>
-                <p data-i18n="click_view">Click to view</p>
-              </div>
-            </div>
-
-            <div class="gallery__item" data-category="awards">
-              <img src="assets/img/work5.jpg" alt="With fellow artists" />
-              <div class="gallery__overlay">
-                <h3 data-i18n="award2">International Honor</h3>
+                <h3 data-i18n="performance1">Cultural Event</h3>
                 <p data-i18n="click_view">Click to view</p>
               </div>
             </div>
 
             <div class="gallery__item" data-category="events">
               <img
-                src="assets/img/work6.jpg"
-                alt="Workshop on Khortha language"
+                src="assets/img/event_2.jpg"
+                alt="Meeting with honourable CM "
               />
               <div class="gallery__overlay">
-                <h3 data-i18n="event2">Language Workshop</h3>
+                <h3 data-i18n="award1">Meeting with honourable CM</h3>
                 <p data-i18n="click_view">Click to view</p>
               </div>
             </div>
+
+            <div class="gallery__item" data-category="events">
+              <img src="assets/img/event_3.jpg" alt="Meeting Kumar Sanu" />
+              <div class="gallery__overlay">
+                <h3 data-i18n="event1">Meeting Kumar Sanu</h3>
+                <p data-i18n="click_view">Click to view</p>
+              </div>
+            </div>
+
+            <div class="gallery__item" data-category="awards">
+              <img
+                src="assets/img/event_4.jpg"
+                alt="Singing Khortha folk song"
+              />
+              <div class="gallery__overlay">
+                <h3 data-i18n="performance2">Sankritic Samman</h3>
+                <p data-i18n="click_view">Click to view</p>
+              </div>
+            </div>
+
+            <div class="gallery__item" data-category="awards">
+              <img src="assets/img/event_5.jpg" alt="Srinivas Samman" />
+              <div class="gallery__overlay">
+                <h3 data-i18n="award2">Srinivas Samman</h3>
+                <p data-i18n="click_view">Click to view</p>
+              </div>
+            </div>
+
+            <div class="gallery__item" data-category="events">
+              <img src="assets/img/event_6.jpg" alt="Meeting Yashpal Sharma" />
+              <div class="gallery__overlay">
+                <h3 data-i18n="event2">Meeting Yashpal Sharma</h3>
+                <p data-i18n="click_view">Click to view</p>
+              </div>
+            </div>
+
+            <div class="gallery__item" data-category="awards">
+              <img src="assets/img/event_7.jpg" alt="Meeting" />
+              <div class="gallery__overlay">
+                <h3 data-i18n="event2"></h3>
+                <p data-i18n="click_view">Click to view</p>
+              </div>
+            </div>
+           <div class="gallery__item" data-category="event">
+              <img src="assets/img/event_8.jpg" alt="Meeting" />
+              <div class="gallery__overlay">
+                <h3 data-i18n="event2"></h3>
+                <p data-i18n="click_view">Click to view</p>
+              </div>
+            </div>
+
           </div>
         </div>
       </section>
@@ -340,12 +349,12 @@
       </section>
 
       <!--===== YOUTUBE VIDEOS =====-->
-<section class="videos section" id="videos">
-  <h2 class="section-title" data-i18n="videos">YouTube Videos</h2>
-  <div class="videos__container" id="youtube-videos-container">
-    <!-- Videos will be inserted here by JavaScript -->
-  </div>
-</section>
+      <section class="videos section" id="videos">
+        <h2 class="section-title" data-i18n="videos">YouTube Videos</h2>
+        <div class="videos__container" id="youtube-videos-container">
+          <!-- Videos will be inserted here by JavaScript -->
+        </div>
+      </section>
     </main>
 
     <!-- Lightbox -->
@@ -356,7 +365,7 @@
 
     <!--===== FOOTER =====-->
     <footer class="footer">
-      <p class="footer__title">Vinay Kumar Tiwari</p>
+      <p class="footer__title">Vinay Tiwari</p>
       <p class="footer__copy">Made with ❤ in India</p>
       <p class="footer__copy">
         &#169; Arkvision Labs Private Limited. All rights reserved
