--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,29 @@
     <title>Vinay Kumar Tiwari - Khortha Lyricist & Cultural Activist</title>
   </head>
   <body>
+    <script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.7.1/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.7.1/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyBgDwBLK68dI3BbJJ1gjZEIdyMvChWP4ko",
+    authDomain: "vinay-tiwari-34479.firebaseapp.com",
+    projectId: "vinay-tiwari-34479",
+    storageBucket: "vinay-tiwari-34479.firebasestorage.app",
+    messagingSenderId: "238155819272",
+    appId: "1:238155819272:web:b242b5f3c09de8953da4bd",
+    measurementId: "G-HE0Q70XH42"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+</script>
     <!--===== HEADER =====-->
     <header class="l-header">
       <nav class="nav bd-grid">
