readme and youtube alignment

--- a/public/index.html
+++ b/public/index.html
@@ -147,6 +147,7 @@
                 >
               </div>
             </div>
+            <a href="about.html" class="button about__button" data-i18n="read_more">Read More</a>
           </div>
         </div>
       </section>
